Fixed Alignment

--- a/style.css
+++ b/style.css
@@ -938,7 +938,7 @@ body {
 }
 
 .dark-mode #About h1 {
-  color: #ffa500; /* Orange color for the main heading in dark mode */
+  color: orange; /* Orange color for the main heading in dark mode */
 }
 
 .light-mode #About h2 {
@@ -1332,7 +1332,7 @@ body.light-mode {
 /* itineraries */
 .itineraries-section {
   padding: 50px;
-  background-color: #f4f4f4;
+  background-color: #F0F8FF;
   text-align: center;
 }
 
@@ -1371,11 +1371,12 @@ body.light-mode {
 
     /* itineraries */
     .itineraries-section {
-      padding: 50px;
       background-color: #f4f4f4;
       text-align: center;
       height: 60vh;
-      padding: 20px;
+      padding: 0px;
+      box-shadow: #000000;
+      border-color: black;
     }
 
     .itineraries-section h2 {
@@ -1396,6 +1397,7 @@ body.light-mode {
     .itinerary {
       background: lightgrey;
       padding: 20px;
+      margin: 2px;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       flex: 1 1 calc(33% - 40px);
@@ -1427,11 +1429,12 @@ body.light-mode {
       background-color: #007bff;
       color: white;
       padding: 10px 15px;
+      margin: -29px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
       transition: background-color 0.3s;
-      margin-bottom: 15px;
+      margin-bottom: 25px;
     }
 
     .itinerary button:hover {
@@ -2462,6 +2465,8 @@ body.light-mode {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  margin: 30px;
+  padding: 20px;
 }
 @media (max-width:900px){
    .testimonials-container{
@@ -2587,7 +2592,7 @@ body.light-mode {
 
 /* General Body Style */
 #reviews {
-  margin: 0;
+  margin: 20px;
   padding: 0;
   font-family: Arial, sans-serif;
   background-color: #e8d9f1; /* Light purple background */
@@ -2597,8 +2602,13 @@ body.light-mode {
 .reviews-section {
   padding: 40px;
   display: flex;
+  margin: 20px;
   justify-content: center;
   align-items: center;
+}
+
+.review-form{
+  margin: 22px;
 }
 
 
@@ -2620,6 +2630,7 @@ body.light-mode {
 .form {
   display: flex;
   flex-direction: column;
+  padding: 20px;
 }
 @media (max-width:900px){
   .review-form{
